fixed contrast issue

--- a/final/styles/decathlon.css
+++ b/final/styles/decathlon.css
@@ -7,7 +7,7 @@
 header {
     max-width: 960px;
     margin: 0 auto;
-    background-color: #EA4F36;
+    background-color: #852718;
     position: relative;
 }
 
